samples/_failures_safe/1761314640_4a0411_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2235454a.c: In function ‘main’:
./samples/SAFE/__tmp_2235454a.c:173:9: error: ‘buffer’ undeclared (first use in this function); did you mean ‘Buffer’?
  173 |         buffer
      |         ^~~~~~
      |         Buffer
./samples/SAFE/__tmp_2235454a.c:173:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2235454a.c:173:15: error: expected ‘;’ at end of input
  173 |         buffer
      |               ^
      |               ;
./samples/SAFE/__tmp_2235454a.c:173:9: error: expected declaration or statement at end of input
  173 |         buffer
      |         ^~~~~~
./samples/SAFE/__tmp_2235454a.c:173:9: error: expected declaration or statement at end of input
